--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-pyOpenSSL==0.13.1
-pyparsing==2.0.1
-python-dateutil==1.5
-pytz==2013.7
-scipy==0.13.0b1
-six==1.4.1
-virtualenv==16.3.0
+pyOpenSSL>=23.0.0
+pyparsing>=3.0.0
+pytest>=7.0.0
